// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionModal back button renders and functions 1`] = `<!---->`;

exports[`ActionModal runs validation and changes step on sign step should dispaly warning when using an address not in the extension 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-icon action-modal-prev"
    id="prevBtn"
  >
    <i
      class="material-icons notranslate"
    >
      arrow_back
    </i>
  </div>
   
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons notranslate"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Send
      
    </span>
     
    <steps-stub
      activestep="sign"
      steps="Details,Fees,Sign"
    />
     
    <p
      class="form-message notice extension-address"
    >
      
        The address you are trying to send with is not available in the
        extension.
      
    </p>
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <hardwarestate-stub
      icon="info"
    >
      <div>
        
            Please send the transaction to be signed in the Lunie Browser
            Extension.
          
      </div>
       
      <!---->
       
      <!---->
    </hardwarestate-stub>
  </div>
   
  <!---->
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <tmbtn-stub
        id="closeBtn"
        type="tertiary"
        value="Cancel"
      />
       
      <tmbtn-stub
        type="primary"
        value="Send"
      />
    </tmformgroup-stub>
  </div>
</div>
`;

exports[`ActionModal should show the action modal on success 1`] = `<!---->`;

exports[`ActionModal should show the action modal waiting on inclusion 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with explore on fees step 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with explore on sign step 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with explore sending 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with extension on fees step 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with extension on sign step 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with extension sending 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with ledger on fees step 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with ledger on sign step 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with ledger sending 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with local on fees step 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with local on sign step 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user has logged in with local sending 1`] = `<!---->`;

exports[`ActionModal should show the action modal when user hasn't logged in 1`] = `<!---->`;

exports[`ActionModal shows a feature unavailable message 1`] = `<!---->`;

exports[`ActionModal shows loading when there is still data to be loaded 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <!---->
   
  <div
    class="action-modal-icon action-modal-close"
    id="closeBtn"
  >
    <i
      class="material-icons notranslate"
    >
      close
    </i>
  </div>
   
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Send
      
    </span>
     
    <steps-stub
      activestep="details"
      steps="Details,Fees,Sign"
    />
     
    <!---->
  </div>
   
  <tmdataloading-stub
    title="Data is loading…"
  />
</div>
`;
